--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,14 @@
 
 buildscript {
     ext.kotlin_version = '1.3.72'
+    ext.koin_version = '1.0.2'
+    ext.retrofit_version = '2.5.0'
+    ext.rx_java_version = '2.1.14'
+    ext.rx_android_version = '2.1.1'
+    ext.retrofit_version = '2.6.2'
+    ext.okhttp_version = '3.12.0'
+    ext.moshi_version = '1.8.0'
+
     repositories {
         google()
         jcenter()
